# ImageEditor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  viewer.pro
include/: detection.h  filter.h  kernel.h  mainWindow.h  openclProgram.h  outils.h  popup.h  segmentation.h  violaJones.h
kernels/: gaussian.cl  laplacian.cl
src/: detection.cpp  filter.cpp  kernel.cpp  mainWindow.cpp  openclProgram.cpp  outils.cpp  popup.cpp  segmentation.cpp  violaJones.cpp
